--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,30 +1,33 @@
 .home {
     padding: 50px 0;
-
+    h1{
+        color: aqua;
+        text-transform: capitalize;
+    }
     table.table { 
         width: 90%;
         margin: auto; 
         border-collapse: collapse; 
         margin: auto;
+        tr:nth-of-type(even) { 
+            background: #eee; 
+            }
+        
+        th { 
+             color: #707070; 
+             text-transform: capitalize;
+            font-weight: bold; 
+            }
+        
+        td, th { 
+            padding: 10px; 
+            border: 1px solid #ccc; 
+            text-align: left; 
+            font-size: 18px;
+            }
         }
     
     
-    tr:nth-of-type(even) { 
-        background: #eee; 
-        }
-    
-    th { 
-         color: #707070; 
-         text-transform: capitalize;
-        font-weight: bold; 
-        }
-    
-    td, th { 
-        padding: 10px; 
-        border: 1px solid #ccc; 
-        text-align: left; 
-        font-size: 18px;
-        }
     
 
     @media 
