add delete interests fun and add router dom

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,6 +11,7 @@ $border-curve: 2rem;
 $transition:all .2s ease-in-out;
 $box-shadow: 0 1px 4px rgba(0, 0, 0, .15);
 $fontSize30: 30px;
+$fontSize25: 25px;
 $fontSize20: 20px;
 $fontSize18: 18px;
 $fontSize17: 17px;
