--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,82 +1,101 @@
 @import '../../scss/variables.scss';
+
 .home {
     padding: 50px 0;
-    h1{
+
+    h1 {
+        font-size: $fontSize30;
         color: $mainColor;
         text-transform: capitalize;
+        text-align: center;
     }
-    table.table { 
-        width: 90%;
-        margin: auto; 
-        border-collapse: collapse; 
-        margin: auto;
-        tr:nth-of-type(even) { 
-            background: #eee; 
-            }
-        
-        th { 
-             color: #707070; 
-             text-transform: capitalize;
-            font-weight: bold; 
-            }
-        
-        td, th { 
-            padding: 10px; 
-            border: 1px solid #ccc; 
-            text-align: left; 
-            font-size: 18px;
-            }
-        }
-    
-    
-    
 
-    @media 
-    only screen and (max-width: 760px),
-    (min-device-width: 768px) and (max-device-width: 1024px)  {
-    
-        table { 
-              width: 100%; 
-              position: relative;
+    table.table {
+        width: 90%;
+        margin: auto;
+        border-collapse: collapse;
+        margin: auto;
+
+        tr:nth-of-type(even) {
+            background: $grayLight;
         }
-    
+
+        th {
+            color: $gray;
+            text-transform: capitalize;
+            font-weight: $bold700;
+        }
+
+        td,
+        th {
+            padding: 10px;
+            border: 1px solid $grayLight;
+            text-align: left;
+            font-size: 18px;
+            text-align: center;
+        }
+    }
+
+    .message-text {
+        font-size: $fontSize25;
+        color: $gray;
+        text-align: center;
+        text-transform: capitalize;
+    }
+
+
+    @media only screen and (max-width: 760px),
+    (min-device-width: 768px) and (max-device-width: 1024px) {
+
+        table {
+            width: 100%;
+            position: relative;
+        }
+
         /* Force table to not be like tables anymore */
-        table, thead, tbody, th, td, tr { 
-            display: block; 
+        table,
+        thead,
+        tbody,
+        th,
+        td,
+        tr {
+            display: block;
         }
-        
+
         /* Hide table headers (but not display: none;, for accessibility) */
-        thead tr { 
+        thead tr {
             position: absolute;
             top: -9999px;
             left: -9999px;
         }
-        
-        tr { border: 1px solid #ccc; }
-        
-        td { 
+
+        tr {
+            border: 1px solid $grayLight;
+        }
+
+        td {
             /* Behave  like a "row" */
             border: none;
-            border-bottom: 1px solid #eee; 
+            border-bottom: 1px solid $grayLight;
             position: relative;
-            padding-left: 50%; 
+            padding-left: 50%;
         }
-    
-        td:before { 
+
+        td:before {
             /* Now like a table header */
             position: absolute;
             /* Top/left values mimic padding */
             top: 6px;
             left: 6px;
-            width: 45%; 
-            padding-right: 10px; 
+            width: 45%;
+            padding-right: 10px;
             white-space: nowrap;
             /* Label the data */
             content: attr(data-column);
-    
+
             color: #000;
-            font-weight: bold;
+            font-weight: $grayLight;
         }
-    
+
     }
 }
